# tech-stack

./: .gitignore  .prettierrc  LICENSE  README.md  Taskfile.install.yml  Taskfile.yml  bootstrap.sh  code_aSk.txt  go.work  setup.sh
.devcontainer/: Dockerfile  README.md  Taskfile.devcontainer.yml  Taskfile.yml  base.Dockerfile  devcontainer.json  docker-compose.yml
k8s/charts/tech-stack/: Chart.yaml  Taskfile.yml  values.yaml
k8s/charts/tech-stack/charts/: service-1-0.1.0.tgz
k8s/charts/tech-stack/migrations/: Chart.yaml  values.yaml
k8s/charts/tech-stack/migrations/templates/: deployment.yaml  hpa.yaml  ingress.yaml  job.yaml  service.yaml  serviceaccount.yaml
k8s/charts/tech-stack/service-1/: Chart.yaml  values.yaml
k8s/charts/tech-stack/service-1/templates/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
k8s/charts/tech-stack/service-2/: Chart.yaml  values.yaml
k8s/charts/tech-stack/service-2/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
k8s/charts/tech-stack/service-3/: Chart.yaml  values.yaml
k8s/charts/tech-stack/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
k8s/deployments/local/: README.md  Taskfile.yml  Tiltfile  a.yml  k3d-cluster.yml  values.elasticsearch.yaml  values.kibana.yaml  values.logstash.yaml  values.mongodb.yaml  values.postgresql.yaml  values.prometheus.yaml  values.redis.yaml  values.yaml
k8s/templates/hello-world/: deployment.yaml  service.yaml
k8s/templates/nginx/: deployment.yaml  service.yaml
migrations/: 00001.up.sql  Dockerfile  README.md  Taskfile.devcontainer.yml  Taskfile.yml  a.sql
migrations/files/: 00001_create_users.up.sql
migrations/src/migrations/: go.mod  go.sum
migrations/src/migrations/cmd/: main.go
service-1/: .env  Dockerfile  Taskfile.devcontainer.yml  Taskfile.yml  pyproject.toml
service-1/src/app_1/cmd/: run_app_1.sh
service-1/src/app_1/internal/: main.py
service-2/: Dockerfile  README.md  Taskfile.devcontainer.yml  Taskfile.yml  package-lock.json  package.json  pyproject.toml
service-2/src/: App.vue
service-2/src/app_1/cmd/: run_app_1.sh
service-2/src/app_1/internal/: main.py
service-2/src/app_1/internal/configs/: mongodb.py
service-2/src/app_1/internal/handlers/: health.py  products.py
service-2/src/app_1/internal/helpers/: utils.py
service-2/src/app_1/internal/models/: products.py
service-2/src/app_1/internal/repos/: mongodb.py
service-2/src/components/: ProductDetails.vue  ProductForm.vue
service-2/src/router/: index.ts
service-2/src/stores/: ProductStore.ts
service-2/src/views/: ProductView.vue  UserView.vue
service-3/: Dockerfile  Taskfile.devcontainer.yml  Taskfile.yml  index.html  nginx.conf  package-lock.json  package.json
service-3/data/: database.json
service-3/src/assets/: main.css
service-3/src/components/: ProductDetails.vue  ProductForm.vue  UserDetails.vue  UserForm.vue
service-3/src/components/__tests__/: Product.spec.ts
service-3/src/models/: Product.ts  User.ts
service-3/src/router/: index.ts
service-3/src/stores/: ProductStore.ts  UserStore.ts
service-3/src/views/: HomeView.vue
service-4/: Dockerfile  README.md  Taskfile.yml
service-4/src/app-1/: go.mod  go.sum
service-4/src/app-1/cmd/: main.go
(+35 files in other folders)
